<?xml version="1.0"?>
<package>
  <name>move_base</name>
  <version>0.0.1</version>
  <description>Nodo encargado del movimiento de la base de Donaxi</description>

  <maintainer email="alvaroubravo@gmail.com">Alvaro Bravo</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>phidgets</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>phidgets</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>

</package>